bg-position iphone 5 fix

--- a/style.css
+++ b/style.css
@@ -9,13 +9,8 @@ body {
 .it-bg {
 	position: absolute;
 
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-color: black;
-
-	width:	100vw;
-	height: 100vh;
+	width:	100%;
+	height: 100%;
 
 
 	background-image: url('images/it-bg.png');
